--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -6,6 +6,7 @@
     "orgPreferences": {
         "enabled": [
             "S1DesktopEnabled"
-        ]
+        ],
+        "disabled": ["S1EncryptedStoragePref2"]
     }
 }
